tests/wpt/tests/third_party/test262/test/language/statements/for-await-of/let-array-with-newline.js
// Copyright (C) 2017 André Bargull. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
esid: sec-for-in-and-for-of-statements
description: >
  ExpressionStatement has a lookahead restriction for `let [`.
info: |
  ExpressionStatement[Yield, Await] :
    [lookahead ∉ { {, function, async [no LineTerminator here] function, class, let [ }]
    Expression[+In, ?Yield, ?Await] ;
negative:
  phase: parse
  type: SyntaxError
flags: [noStrict]
features: [async-iteration]
---*/

$DONOTEVALUATE();

async function* f() {
  for await (var x of []) let
  [a] = 0;
}
